// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportViewPage expect to redirect on fetchReport error 1`] = `
<Redirect
  push={false}
  to="/reports"
/>
`;

exports[`ReportViewPage expect to render skeleton 1`] = `
<Fragment>
  <PageHeader>
    <PageHeaderTitle
      title={
        <React.Fragment>
          <Stack
            gutter="sm"
          >
            <StackItem>
              <Skeleton
                isDark={false}
                size="sm"
              />
            </StackItem>
            <StackItem>
              <Skeleton
                isDark={false}
                size="sm"
              />
            </StackItem>
            <StackItem>
              <Skeleton
                isDark={false}
                size="sm"
              />
            </StackItem>
            <StackItem>
              <Grid>
                <GridItem
                  span={4}
                >
                  <Skeleton
                    isDark={false}
                    size="md"
                  />
                </GridItem>
                <GridItem
                  span={4}
                >
                  <Skeleton
                    isDark={false}
                    size="md"
                  />
                </GridItem>
                <GridItem
                  span={4}
                >
                  <Skeleton
                    isDark={false}
                    size="md"
                  />
                </GridItem>
              </Grid>
            </StackItem>
          </Stack>
        </React.Fragment>
      }
    />
  </PageHeader>
  <Connect(Main)
    style={
      Object {
        "color": "red",
      }
    }
  />
</Fragment>
`;

exports[`ReportViewPage expect to render tabs when fetch status is complete 1`] = `
<Fragment>
  <PageHeader>
    <PageHeaderTitle
      title={
        <React.Fragment>
          <Unknown
            style={
              Object {
                "marginBottom": "25px",
              }
            }
          >
            <BreadcrumbItem>
              <Link
                replace={false}
                to="/reports"
              >
                Reports
              </Link>
            </BreadcrumbItem>
            <BreadcrumbItem
              isActive={true}
            >
              My report name 123
            </BreadcrumbItem>
          </Unknown>
          <div
            className="pf-c-content"
            style={
              Object {
                "marginBottom": "var(--pf-c-content--MarginBottom)",
              }
            }
          >
            <p>
              <span
                className="pf-c-title pf-m-3xl"
              >
                Initial savings estimation (My report name 123)
              </span>
            </p>
            <p>
              <React.Fragment>
                <span>
                  My report descruiption 123
                </span>
                <br />
              </React.Fragment>
              <React.Fragment>
                <span>
                  Source:
                </span>
                 
                <span>
                  VSphere Enterprise Plus
                </span>
                <br />
                <span>
                  Target:
                </span>
                 
                <span>
                  Red Hat Virtualization
                </span>
                <br />
              </React.Fragment>
              <span>
                Date:
              </span>
               
              <span>
                January 2, 1970, 10:17 AM UTC
              </span>
            </p>
          </div>
          <Unknown
            activeKey={0}
            isFilled={true}
            onSelect={[Function]}
          >
            <Tab
              eventKey={0}
              title="Initial savings estimation"
            />
            <Tab
              eventKey={1}
              title="Workload migration summary"
            />
            <Tab
              eventKey={2}
              title="Workload migration inventory"
            />
          </Unknown>
        </React.Fragment>
      }
    />
  </PageHeader>
  <Connect(Main)
    style={
      Object {
        "color": "red",
      }
    }
  >
    children
  </Connect(Main)>
</Fragment>
`;

exports[`ReportViewPage expect to render tabs when fetch status is complete and report is null 1`] = `
<Fragment>
  <PageHeader>
    <PageHeaderTitle
      title={
        <React.Fragment>
          <Unknown
            style={
              Object {
                "marginBottom": "25px",
              }
            }
          >
            <BreadcrumbItem>
              <Link
                replace={false}
                to="/reports"
              >
                Reports
              </Link>
            </BreadcrumbItem>
            <BreadcrumbItem
              isActive={true}
            >
              
            </BreadcrumbItem>
          </Unknown>
          <div
            className="pf-c-content"
            style={
              Object {
                "marginBottom": "var(--pf-c-content--MarginBottom)",
              }
            }
          >
            <p>
              <span
                className="pf-c-title pf-m-3xl"
              >
                Initial savings estimation ()
              </span>
            </p>
            <p>
              <React.Fragment>
                <span>
                  Source:
                </span>
                 
                <span>
                  VSphere Enterprise Plus
                </span>
                <br />
                <span>
                  Target:
                </span>
                 
                <span>
                  Red Hat Virtualization
                </span>
                <br />
              </React.Fragment>
              <span>
                Date:
              </span>
               
              <span>
                Unknown
              </span>
            </p>
          </div>
          <Unknown
            activeKey={0}
            isFilled={true}
            onSelect={[Function]}
          >
            <Tab
              eventKey={0}
              title="Initial savings estimation"
            />
            <Tab
              eventKey={1}
              title="Workload migration summary"
            />
            <Tab
              eventKey={2}
              title="Workload migration inventory"
            />
          </Unknown>
        </React.Fragment>
      }
    />
  </PageHeader>
  <Connect(Main)
    style={
      Object {
        "color": "red",
      }
    }
  >
    children
  </Connect(Main)>
</Fragment>
`;
